[package]
name = "async-io-unixstream-error"
version = "0.1.0"
authors = ["Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2018"
publish = false

[dependencies]
async-std = { version = "=1.5.0", features = ["attributes"] }
swayipc  = { git = "https://github.com/JayceFayne/swayipc-rs", branch = "async-std-1-5", features = ["async"] }